--- a/Day3/tasks/my_ws/src/my-pkg/package.xml
+++ b/Day3/tasks/my_ws/src/my-pkg/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="basante@aucegypt.edu">Basant Elhussein</maintainer>
+  <maintainer email="basantelhussein@aucegypt.edu">Basant Elhussein</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
